--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -129,7 +129,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWt-fG-uCn" userLabel="Fav Button">
-                                            <rect key="frame" x="354" y="69" width="30" height="30"/>
+                                            <rect key="frame" x="118" y="69" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="1Rt-s4-GA8"/>
                                                 <constraint firstAttribute="width" constant="30" id="pFj-Ta-nP6"/>
@@ -140,7 +140,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4cK-qf-VtW" userLabel="Retweet Button">
-                                            <rect key="frame" x="314" y="69" width="30" height="30"/>
+                                            <rect key="frame" x="78" y="69" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="30" id="Q9z-jP-Ztu"/>
                                                 <constraint firstAttribute="height" constant="30" id="icn-wN-MBh"/>
@@ -153,7 +153,6 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="top" secondItem="QiQ-po-NwS" secondAttribute="bottom" constant="4" id="3RW-cw-ItI"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="dWt-fG-uCn" secondAttribute="bottom" constant="10" id="4Zc-95-7s2"/>
                                         <constraint firstItem="dWt-fG-uCn" firstAttribute="leading" secondItem="4cK-qf-VtW" secondAttribute="trailing" constant="10" id="4zJ-bb-pAv"/>
                                         <constraint firstItem="QiQ-po-NwS" firstAttribute="leading" secondItem="pAk-q2-Vpe" secondAttribute="trailing" constant="10" id="8qa-op-GKY"/>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="leading" secondItem="QiQ-po-NwS" secondAttribute="leading" id="BOO-Mq-g7F"/>
@@ -161,15 +160,16 @@
                                         <constraint firstAttribute="bottomMargin" secondItem="4cK-qf-VtW" secondAttribute="bottom" constant="10" id="Iyq-PR-5Wv"/>
                                         <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="BbY-hP-Yby" secondAttribute="trailing" id="L41-la-wcP"/>
                                         <constraint firstItem="pAk-q2-Vpe" firstAttribute="leading" secondItem="k9R-XW-ssn" secondAttribute="leadingMargin" id="NuC-QL-pOf"/>
+                                        <constraint firstItem="4cK-qf-VtW" firstAttribute="leading" secondItem="AyI-iT-3Cq" secondAttribute="leading" id="PlL-eD-L60"/>
                                         <constraint firstItem="BbY-hP-Yby" firstAttribute="left" secondItem="bY0-WC-6it" secondAttribute="right" id="WNH-9a-ieP"/>
                                         <constraint firstItem="bY0-WC-6it" firstAttribute="top" secondItem="QiQ-po-NwS" secondAttribute="top" id="We0-BV-Slg"/>
                                         <constraint firstItem="pAk-q2-Vpe" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="c5l-Vd-mgL"/>
                                         <constraint firstItem="bY0-WC-6it" firstAttribute="leading" secondItem="QiQ-po-NwS" secondAttribute="trailing" constant="5" id="c9O-Cm-avq"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="dWt-fG-uCn" secondAttribute="trailing" constant="10" id="el5-gN-3hY"/>
+                                        <constraint firstItem="dWt-fG-uCn" firstAttribute="top" secondItem="4cK-qf-VtW" secondAttribute="top" id="ihL-MI-7My"/>
+                                        <constraint firstItem="4cK-qf-VtW" firstAttribute="top" secondItem="AyI-iT-3Cq" secondAttribute="bottom" constant="8" id="rPr-6F-BAg"/>
                                         <constraint firstItem="QiQ-po-NwS" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="rpd-fw-6a8"/>
                                         <constraint firstItem="BbY-hP-Yby" firstAttribute="top" secondItem="bY0-WC-6it" secondAttribute="top" id="s8p-Hs-j0x"/>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="trailing" secondItem="k9R-XW-ssn" secondAttribute="trailingMargin" id="wyh-Xd-YY6"/>
-                                        <constraint firstItem="dWt-fG-uCn" firstAttribute="top" secondItem="AyI-iT-3Cq" secondAttribute="bottom" constant="8" id="zbK-0g-vyo"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -195,7 +195,7 @@
                                 <action selector="onLogoutClicked:" destination="VX0-bg-8tJ" id="2oS-i6-erm"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="hrA-MC-4QB">
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" image="edit-icon" id="hrA-MC-4QB">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <segue destination="DEw-M5-ubK" kind="presentation" id="TMq-5B-ZQ5"/>
@@ -220,7 +220,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="78q-sc-kKx" userLabel="Tweet Text View">
-                                <rect key="frame" x="0.0" y="56" width="414" height="220"/>
+                                <rect key="frame" x="12" y="68" width="390" height="220"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="220" id="tOa-TW-7pU"/>
@@ -229,12 +229,21 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="140" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xea-cg-P0O" userLabel="Char Count Label">
+                                <rect key="frame" x="373.33333333333331" y="296" width="28.666666666666686" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="78q-sc-kKx" firstAttribute="leading" secondItem="apg-vm-Cih" secondAttribute="leading" id="9hD-Tw-ep8"/>
-                            <constraint firstItem="78q-sc-kKx" firstAttribute="top" secondItem="apg-vm-Cih" secondAttribute="top" id="cnl-fd-29S"/>
-                            <constraint firstItem="apg-vm-Cih" firstAttribute="trailing" secondItem="78q-sc-kKx" secondAttribute="trailing" id="vKe-0B-r6R"/>
+                            <constraint firstItem="78q-sc-kKx" firstAttribute="leading" secondItem="apg-vm-Cih" secondAttribute="leading" constant="12" id="9hD-Tw-ep8"/>
+                            <constraint firstItem="78q-sc-kKx" firstAttribute="top" secondItem="apg-vm-Cih" secondAttribute="top" constant="12" id="cnl-fd-29S"/>
+                            <constraint firstItem="Xea-cg-P0O" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="apg-vm-Cih" secondAttribute="leading" id="owc-r1-ljX"/>
+                            <constraint firstItem="apg-vm-Cih" firstAttribute="trailing" secondItem="78q-sc-kKx" secondAttribute="trailing" constant="12" id="vKe-0B-r6R"/>
+                            <constraint firstItem="Xea-cg-P0O" firstAttribute="top" secondItem="78q-sc-kKx" secondAttribute="bottom" constant="8" id="y5t-0g-qdB"/>
+                            <constraint firstItem="Xea-cg-P0O" firstAttribute="trailing" secondItem="78q-sc-kKx" secondAttribute="trailing" id="zMK-zH-RFp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="apg-vm-Cih"/>
                     </view>
@@ -253,6 +262,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="charCountLabel" destination="Xea-cg-P0O" id="bVa-ee-hy2"/>
                         <outlet property="tweetTextView" destination="78q-sc-kKx" id="oeR-fJ-xOo"/>
                     </connections>
                 </viewController>
@@ -306,6 +316,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="edit-icon" width="30" height="27"/>
         <image name="favor-icon" width="30" height="30"/>
         <image name="retweet-icon" width="30" height="30"/>
     </resources>
