--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -129,11 +129,12 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWt-fG-uCn" userLabel="Fav Button">
-                                            <rect key="frame" x="118" y="69" width="30" height="30"/>
+                                            <rect key="frame" x="146" y="69" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="1Rt-s4-GA8"/>
                                                 <constraint firstAttribute="width" constant="30" id="pFj-Ta-nP6"/>
                                             </constraints>
+                                            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                             <state key="normal" image="favor-icon"/>
                                             <connections>
                                                 <action selector="favoriteTweet:" destination="rZI-C9-LIq" eventType="touchUpInside" id="nbO-Wa-Xkn"/>
@@ -145,26 +146,46 @@
                                                 <constraint firstAttribute="width" constant="30" id="Q9z-jP-Ztu"/>
                                                 <constraint firstAttribute="height" constant="30" id="icn-wN-MBh"/>
                                             </constraints>
+                                            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                             <state key="normal" image="retweet-icon"/>
                                             <connections>
                                                 <action selector="retweet:" destination="rZI-C9-LIq" eventType="touchUpInside" id="HPj-X8-8Bk"/>
                                             </connections>
                                         </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="456" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Lg-35-ykg" userLabel="Retweet Count Label">
+                                            <rect key="frame" x="108" y="75" width="28" height="18"/>
+                                            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQ4-Ka-N6d" userLabel="Fav Count Label">
+                                            <rect key="frame" x="176" y="75" width="25" height="18"/>
+                                            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="top" secondItem="QiQ-po-NwS" secondAttribute="bottom" constant="4" id="3RW-cw-ItI"/>
-                                        <constraint firstItem="dWt-fG-uCn" firstAttribute="leading" secondItem="4cK-qf-VtW" secondAttribute="trailing" constant="10" id="4zJ-bb-pAv"/>
+                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="vQ4-Ka-N6d" secondAttribute="trailing" id="6bW-54-DnX"/>
                                         <constraint firstItem="QiQ-po-NwS" firstAttribute="leading" secondItem="pAk-q2-Vpe" secondAttribute="trailing" constant="10" id="8qa-op-GKY"/>
                                         <constraint firstItem="AyI-iT-3Cq" firstAttribute="leading" secondItem="QiQ-po-NwS" secondAttribute="leading" id="BOO-Mq-g7F"/>
                                         <constraint firstItem="bY0-WC-6it" firstAttribute="bottom" secondItem="QiQ-po-NwS" secondAttribute="bottom" id="Dhv-RA-7Kf"/>
+                                        <constraint firstItem="vQ4-Ka-N6d" firstAttribute="centerY" secondItem="dWt-fG-uCn" secondAttribute="centerY" id="HlR-jn-bSp"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="4cK-qf-VtW" secondAttribute="bottom" constant="10" id="Iyq-PR-5Wv"/>
+                                        <constraint firstItem="5Lg-35-ykg" firstAttribute="centerY" secondItem="4cK-qf-VtW" secondAttribute="centerY" id="KdE-wb-d12"/>
                                         <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="BbY-hP-Yby" secondAttribute="trailing" id="L41-la-wcP"/>
                                         <constraint firstItem="pAk-q2-Vpe" firstAttribute="leading" secondItem="k9R-XW-ssn" secondAttribute="leadingMargin" id="NuC-QL-pOf"/>
                                         <constraint firstItem="4cK-qf-VtW" firstAttribute="leading" secondItem="AyI-iT-3Cq" secondAttribute="leading" id="PlL-eD-L60"/>
                                         <constraint firstItem="BbY-hP-Yby" firstAttribute="left" secondItem="bY0-WC-6it" secondAttribute="right" id="WNH-9a-ieP"/>
+                                        <constraint firstItem="5Lg-35-ykg" firstAttribute="leading" secondItem="4cK-qf-VtW" secondAttribute="trailing" id="WU3-2c-CZW"/>
                                         <constraint firstItem="bY0-WC-6it" firstAttribute="top" secondItem="QiQ-po-NwS" secondAttribute="top" id="We0-BV-Slg"/>
+                                        <constraint firstItem="dWt-fG-uCn" firstAttribute="leading" secondItem="5Lg-35-ykg" secondAttribute="trailing" constant="10" id="YWF-TH-W8d"/>
                                         <constraint firstItem="pAk-q2-Vpe" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="c5l-Vd-mgL"/>
                                         <constraint firstItem="bY0-WC-6it" firstAttribute="leading" secondItem="QiQ-po-NwS" secondAttribute="trailing" constant="5" id="c9O-Cm-avq"/>
+                                        <constraint firstItem="vQ4-Ka-N6d" firstAttribute="leading" secondItem="dWt-fG-uCn" secondAttribute="trailing" id="gm4-V4-2ec"/>
                                         <constraint firstItem="dWt-fG-uCn" firstAttribute="top" secondItem="4cK-qf-VtW" secondAttribute="top" id="ihL-MI-7My"/>
                                         <constraint firstItem="4cK-qf-VtW" firstAttribute="top" secondItem="AyI-iT-3Cq" secondAttribute="bottom" constant="8" id="rPr-6F-BAg"/>
                                         <constraint firstItem="QiQ-po-NwS" firstAttribute="top" secondItem="k9R-XW-ssn" secondAttribute="topMargin" id="rpd-fw-6a8"/>
@@ -174,8 +195,10 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="favButton" destination="dWt-fG-uCn" id="dQa-43-0a5"/>
+                                    <outlet property="favCountLabel" destination="vQ4-Ka-N6d" id="lYM-Ss-iTX"/>
                                     <outlet property="profileImage" destination="pAk-q2-Vpe" id="oK5-fo-3OL"/>
                                     <outlet property="retweetButton" destination="4cK-qf-VtW" id="fFu-bu-xAM"/>
+                                    <outlet property="retweetCountLabel" destination="5Lg-35-ykg" id="uVv-9D-R1W"/>
                                     <outlet property="screennameLabel" destination="bY0-WC-6it" id="yaw-IP-U8E"/>
                                     <outlet property="timeLabel" destination="BbY-hP-Yby" id="3kA-xb-Cgd"/>
                                     <outlet property="tweetContentLabel" destination="AyI-iT-3Cq" id="pry-et-emI"/>
@@ -226,12 +249,12 @@
                                     <constraint firstAttribute="height" constant="220" id="tOa-TW-7pU"/>
                                 </constraints>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="140" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xea-cg-P0O" userLabel="Char Count Label">
-                                <rect key="frame" x="373.33333333333331" y="296" width="28.666666666666686" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="378" y="293" width="24" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -242,7 +265,7 @@
                             <constraint firstItem="78q-sc-kKx" firstAttribute="top" secondItem="apg-vm-Cih" secondAttribute="top" constant="12" id="cnl-fd-29S"/>
                             <constraint firstItem="Xea-cg-P0O" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="apg-vm-Cih" secondAttribute="leading" id="owc-r1-ljX"/>
                             <constraint firstItem="apg-vm-Cih" firstAttribute="trailing" secondItem="78q-sc-kKx" secondAttribute="trailing" constant="12" id="vKe-0B-r6R"/>
-                            <constraint firstItem="Xea-cg-P0O" firstAttribute="top" secondItem="78q-sc-kKx" secondAttribute="bottom" constant="8" id="y5t-0g-qdB"/>
+                            <constraint firstItem="Xea-cg-P0O" firstAttribute="top" secondItem="78q-sc-kKx" secondAttribute="bottom" constant="5" id="y5t-0g-qdB"/>
                             <constraint firstItem="Xea-cg-P0O" firstAttribute="trailing" secondItem="78q-sc-kKx" secondAttribute="trailing" id="zMK-zH-RFp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="apg-vm-Cih"/>
