--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -218,12 +218,20 @@
                                 <action selector="onLogoutClicked:" destination="VX0-bg-8tJ" id="2oS-i6-erm"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Tweet" image="edit-icon" id="hrA-MC-4QB">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <connections>
-                                <segue destination="DEw-M5-ubK" kind="presentation" id="TMq-5B-ZQ5"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Tweet" image="edit-icon" id="hrA-MC-4QB">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <segue destination="DEw-M5-ubK" kind="presentation" id="TMq-5B-ZQ5"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Item" image="profile-Icon" id="Qdl-LV-b1C" userLabel="Profile">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <segue destination="7Kg-Kj-San" kind="show" id="Q5Z-hV-aUf"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <segue destination="tda-uV-GaR" kind="unwind" identifier="unwindToLogin" unwindAction="prepareForUnwindWithSegue:" id="5BY-so-Arb"/>
@@ -233,6 +241,97 @@
                 <exit id="tda-uV-GaR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-5497" y="-1515"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="0kc-HQ-cUy">
+            <objects>
+                <viewController id="7Kg-Kj-San" customClass="ProfileViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cDy-r3-PlG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EhZ-K6-aVW" userLabel="Profile Image View">
+                                <rect key="frame" x="20" y="108" width="73" height="73"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="73" id="Xkc-5i-BTe"/>
+                                    <constraint firstAttribute="width" constant="73" id="j3q-wR-y6U"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AGr-ni-Fgp" userLabel="Username Label">
+                                <rect key="frame" x="20" y="191" width="394" height="27"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@screenname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gyv-27-vXd" userLabel="Screenname Label">
+                                <rect key="frame" x="20" y="218" width="394" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="40" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klm-Xx-VJD" userLabel="Following Count Label">
+                                <rect key="frame" x="20" y="254" width="21" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4P-YB-twu" userLabel="Following Label">
+                                <rect key="frame" x="45.999999999999993" y="254" width="72.333333333333314" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIu-AA-KhP" userLabel="Followers Count Label">
+                                <rect key="frame" x="128.33333333333334" y="254" width="18" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Followers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hAp-Or-yyp" userLabel="Followers Label">
+                                <rect key="frame" x="151.33333333333334" y="254" width="72.333333333333343" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="MZm-Ic-id7" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hAp-Or-yyp" secondAttribute="trailing" id="34t-7v-UKo"/>
+                            <constraint firstItem="gyv-27-vXd" firstAttribute="leading" secondItem="AGr-ni-Fgp" secondAttribute="leading" id="5Ml-3B-ewT"/>
+                            <constraint firstItem="h4P-YB-twu" firstAttribute="leading" secondItem="klm-Xx-VJD" secondAttribute="trailing" constant="5" id="C4Q-Wg-vF2"/>
+                            <constraint firstItem="MZm-Ic-id7" firstAttribute="trailing" secondItem="AGr-ni-Fgp" secondAttribute="trailing" id="C76-ZN-gaV"/>
+                            <constraint firstItem="EhZ-K6-aVW" firstAttribute="leading" secondItem="MZm-Ic-id7" secondAttribute="leading" constant="20" id="GqX-aG-rBL"/>
+                            <constraint firstItem="AGr-ni-Fgp" firstAttribute="leading" secondItem="EhZ-K6-aVW" secondAttribute="leading" id="MOb-Dh-nDo"/>
+                            <constraint firstItem="gyv-27-vXd" firstAttribute="top" secondItem="AGr-ni-Fgp" secondAttribute="bottom" id="PYN-g8-pAD"/>
+                            <constraint firstItem="eIu-AA-KhP" firstAttribute="centerY" secondItem="h4P-YB-twu" secondAttribute="centerY" id="RqO-Bw-HLg"/>
+                            <constraint firstItem="AGr-ni-Fgp" firstAttribute="top" secondItem="EhZ-K6-aVW" secondAttribute="bottom" constant="10" id="ZME-d4-WAr"/>
+                            <constraint firstItem="hAp-Or-yyp" firstAttribute="centerY" secondItem="eIu-AA-KhP" secondAttribute="centerY" id="fKk-Ar-GTG"/>
+                            <constraint firstItem="hAp-Or-yyp" firstAttribute="leading" secondItem="eIu-AA-KhP" secondAttribute="trailing" constant="5" id="fT2-xd-hNs"/>
+                            <constraint firstItem="klm-Xx-VJD" firstAttribute="top" secondItem="gyv-27-vXd" secondAttribute="bottom" constant="15" id="iib-ee-zl1"/>
+                            <constraint firstItem="h4P-YB-twu" firstAttribute="centerY" secondItem="klm-Xx-VJD" secondAttribute="centerY" id="kxR-Dk-DMY"/>
+                            <constraint firstItem="eIu-AA-KhP" firstAttribute="leading" secondItem="h4P-YB-twu" secondAttribute="trailing" constant="10" id="pIM-Zi-E7F"/>
+                            <constraint firstItem="EhZ-K6-aVW" firstAttribute="top" secondItem="MZm-Ic-id7" secondAttribute="top" constant="20" id="vgU-nU-Gdv"/>
+                            <constraint firstItem="gyv-27-vXd" firstAttribute="trailing" secondItem="AGr-ni-Fgp" secondAttribute="trailing" id="xgs-8T-jvb"/>
+                            <constraint firstItem="klm-Xx-VJD" firstAttribute="leading" secondItem="gyv-27-vXd" secondAttribute="leading" id="yFj-mc-ZD5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="MZm-Ic-id7"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="4GP-h7-e7s"/>
+                    <connections>
+                        <outlet property="followersCountLabel" destination="eIu-AA-KhP" id="gGx-e2-hAO"/>
+                        <outlet property="followingCountLabel" destination="klm-Xx-VJD" id="0tF-js-JL6"/>
+                        <outlet property="profileImageView" destination="EhZ-K6-aVW" id="DPQ-pm-GAg"/>
+                        <outlet property="screennameLabel" destination="gyv-27-vXd" id="tId-iw-1j8"/>
+                        <outlet property="usernameLabel" destination="AGr-ni-Fgp" id="cvB-mC-tKe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xGT-p3-MPV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4588.4057971014499" y="-1515.4017857142856"/>
         </scene>
         <!--New Tweet View Controller-->
         <scene sceneID="P0n-P1-wYF">
@@ -301,8 +400,12 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EhO-yR-YyC">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.1137254902" green="0.63137254899999995" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                     </navigationBar>
@@ -341,6 +444,7 @@
     <resources>
         <image name="edit-icon" width="30" height="27"/>
         <image name="favor-icon" width="30" height="30"/>
+        <image name="profile-Icon" width="26" height="26"/>
         <image name="retweet-icon" width="30" height="30"/>
     </resources>
 </document>
